--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "babel-cli": "^6.18.0",
     "babel-runtime": "^6.11.6",
     "bluebird": "^3.4.6",
+    "body-parser": "^1.15.2",
     "es6-promise": "^4.0.5",
     "express": "^4.14.0",
     "isomorphic-fetch": "^2.2.1",
-    "lodash": "^4.16.6"
+    "lodash": "^4.16.6",
+    "mongoose": "^4.6.6"
   },
   "devDependencies": {
     "babel-cli": "^6.16.0",
