--- a/package.json
+++ b/package.json
@@ -30,13 +30,22 @@
   "dependencies": {
     "babel-cli": "^6.18.0",
     "babel-runtime": "^6.11.6",
+    "bcryptjs": "^2.3.0",
     "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
+    "bunyan": "^1.8.5",
+    "cookie-parser": "^1.4.3",
+    "cors": "^2.8.1",
     "es6-promise": "^4.0.5",
     "express": "^4.14.0",
+    "express-async-router": "^0.1.12",
+    "express-jwt": "^5.1.0",
     "isomorphic-fetch": "^2.2.1",
+    "jsonwebtoken": "^7.1.9",
+    "left-pad": "^1.1.3",
     "lodash": "^4.16.6",
-    "mongoose": "^4.6.6"
+    "mongoose": "^4.6.6",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "babel-cli": "^6.16.0",
@@ -73,6 +82,8 @@
     "dev-les2": "nodemon --exec babel-node -- src/lesson2/index.js",
     "dev-les3": "nodemon --exec babel-node -- src/lesson3/index.js",
     "dev-les3A": "nodemon --exec babel-node -- src/lesson3/task3A.js",
+    "dev-les3B": "nodemon --exec babel-node -- src/lesson3/task3B.js",
+    "dev-les4": "nodemon --exec babel-node -- src/lesson4/index.js",
     "start": "easystatic start docs"
   }
 }
