--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "express": "^4.14.0",
     "express-async-router": "^0.1.12",
     "express-jwt": "^5.1.0",
+    "foreach-timeout": "^2.0.1",
     "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^7.1.9",
     "left-pad": "^1.1.3",
@@ -80,6 +81,7 @@
     "dev": "nodemon --exec babel-node -- src/index.js",
     "dev-les1": "nodemon --exec babel-node -- src/lesson1/index.js",
     "dev-les2": "nodemon --exec babel-node -- src/lesson2/index.js",
+    "dev-les2X": "nodemon --exec babel-node -- src/lesson2/task2X.js",
     "dev-les3": "nodemon --exec babel-node -- src/lesson3/index.js",
     "dev-les3A": "nodemon --exec babel-node -- src/lesson3/task3A.js",
     "dev-les3B": "nodemon --exec babel-node -- src/lesson3/task3B.js",
